--- a/saludmental.html
+++ b/saludmental.html
@@ -45,8 +45,7 @@
     </nav>
 </header>
 
-
-    <h1> Area de salud mental </h1>
+    <h1 class="titulo"> Area de salud mental </h1>
     <div class="psicologo">
         <img src="img/Banner_Art_Novedades_S.Mental.jpg" alt="referencia">
     </div>
