agrego el proyecto con los cambios definitivos

--- a/pages/home.html
+++ b/pages/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous"
     referrerpolicy="no-referrer"/>
     <title>Clinica Lavalle</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 <body>
     <header>
@@ -52,7 +52,7 @@
        <main> 
        <section class="parrafoHome">
             <div>
-                <h1> Salud para toda la familia</h1>
+               <p class="titulo1"> Salud para toda la familia</p>
                 <h2>¿Quienes somos?</h2>
                 <p>La clínica Lavalle es un reconocido centro de salud con más de 15 años de experiencia en la prestación de servicios médicos. Se ha convertido en la opción preferida de muchas personas debido a su excelente servicio y atención al paciente.</p>
             </div>
@@ -81,7 +81,10 @@
                         <p><i class="fa-solid fa-flask-vial"></i></p>
                         <p>Laboratorio</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis rem sequi asperiores, accusamus quasi deserunt rerum. Odio quibusdam, consequatur tenetur necessitatibus omnis quod dolorem architecto quam alias aliquam, vel ea?</p>
+                    <p>Las áreas de un laboratorio clínico y sus funciones estarán enmarcadas en la concepción, desarrollo y construcción del mismo. Éste es el lugar donde un equipo multidisciplinario analiza muestras biológicas humanas, que contribuyen al estudio, prevención e investigación del cuerpo humano.
+                        El laboratorio clínico emplea metodologías de diversas disciplinas como la bioquímica, hematología, inmunología y microbiología, dependiendo de las áreas de un laboratorio clínico y sus funciones realizadas, los laboratorios se dividen en dos:
+                        Laboratorios de análisis de rutina.
+                        Laboratorios de análisis específicos.</p>
                 </div>
                 <div>
                     <div>
@@ -89,7 +92,9 @@
                         <p>Cardiología</p>
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis rem sequi asperiores, accusamus quasi deserunt rerum. Odio quibusdam, consequatur tenetur necessitatibus omnis quod dolorem architecto quam alias aliquam, vel ea?</p>
+                        <p> Un cardiólogo es un médico especializado en el tratamiento de enfermedades y complicaciones del sistema cardiovascular, estos médicos suelen trabajar con los vasos sanguineos y el corazón. Las afecciones mas comunes a tratar son: 
+                            Las enfermedades de las arterias coronarias y las enfermedades cardiacas y vasculares.
+                        </p>
                     </div>
                 </div>
                 <div>
@@ -98,7 +103,7 @@
                         <p>Psiquiatría</p>
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis rem sequi asperiores, accusamus quasi deserunt rerum. Odio quibusdam, consequatur tenetur necessitatibus omnis quod dolorem architecto quam alias aliquam, vel ea?</p>
+                        <p> Tiene  a su cargo el abordaje de los diversos trastornos de la salud mental: depresiones, ataques de pánico, ansiedad, angustia, desórdenes de la conducta alimentaria, adicción y abuso de sustancias, estrés postraumático, dificultades vinculares, problemáticas etarias de la adolescencia, adultez y vejez, demencias, enfermedades mentales crónicas, etc. Este abordaje comprende el diagnóstico, la asistencia especializada, la prevención, la rehabilitación, la docencia y la investigación.</p>
                     </div>
                 </div>
                 <div>
@@ -107,7 +112,10 @@
                         <p>Radiología</p>
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis rem sequi asperiores, accusamus quasi deserunt rerum. Odio quibusdam, consequatur tenetur necessitatibus omnis quod dolorem architecto quam alias aliquam, vel ea?</p>
+                        <p>Se ocupa del diagnóstico y tratamiento tanto de enfermedades como de lesiones mediante el uso de imágenes como radiografías, tomografía computarizada, resonancia magnética, medicina nuclear entre otras.
+                            • Estudios simples.
+                            • Estudios contrastados.
+                            • Mamografía. </p>
                     </div>
                 </div>
             </div>
