--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -26,7 +26,7 @@
                  <li class="develop">
                  CONTACTO
                  <ul class="ul-second">
-                 <li><a href="./formulario.html">Formularo</a></li>
+                 <li><a href="./formulario.html">Formulario</a></li>
                  </ul>
              </li>
             <li class="develop">
