--- a/pages/home.html
+++ b/pages/home.html
@@ -28,7 +28,7 @@
                      <li class="develop">
                      CONTACTO
                      <ul class="ul-second">
-                     <li><a href="./formulario.html">Formularo</a></li>
+                     <li><a href="./formulario.html">Formulario</a></li>
                      </ul>
                  </li>
                 <li class="develop">
