cambie error ortográfico traumatologia.html

--- a/pages/traumatologia.html
+++ b/pages/traumatologia.html
@@ -30,7 +30,7 @@
              <li class="develop">
              CONTACTO
              <ul class="ul-second">
-             <li><a href="./formulario.html">Formularo</a></li>
+             <li><a href="./formulario.html">Formulario</a></li>
              </ul>
          </li>
                 <li class="develop">
